# rest-api-client

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test.yaml
actions/test-action/: action.yml  index.js  index.test.js  package-lock.json  package.json
integration_test/: chuck_norris.py
src/rest_api_client/: lib.py
test/: test_lib.py
test/integration/: chuck_norris.py  test_notion.py  test_pantry.py
