[metadata]
name = py-rest-api-client
version = 0.0.1
author = Paolo Rechia
author_email = paolorechia+pyrestapiclient@gmail.com
description = A 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paolorechia/rest-api-client
project_urls =
    Bug Tracker = https://github.com/paolorechia/rest-api-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    httpx==0.18.2
    pydantic
    makefun

[options.packages.find]
where = src

[flake8]
max-line-length =100